# os-exitcodes

./: README.md  pyproject.toml
exitcodes/: __init__.py  enum_variant.py
os_exitcodes/: __init__.py  enum_variant.py  int_variant.py
tests/: test_exitcodes.py
